# NILE

./: .gitignore  README.md  config.json.example  knowledge.json  knowledge.json.example  knowledge_base.py  llm_interface.py  main.py  pyproject.toml  symbolic_engine.py
legacy/: controller.py  knowledge_base.py  llm_interface.py  relation_utils.py  symbolic_engine.py
nile/: __init__.py  main.py
nile/api/: __init__.py
nile/config/: __init__.py  settings.py
nile/core/: __init__.py  error_handler.py  exceptions.py
nile/core/nlp/: __init__.py  entity_extractor.py  japanese_processor.py  pattern_matcher.py
nile/core/reasoning/: __init__.py  inference_rules.py  knowledge_graph.py  symbolic_engine.py
nile/core/storage/: __init__.py  cache_manager.py  fact_store.py  knowledge_base.py
nile/tests/: conftest.py  test_japanese_processor.py  test_knowledge_base.py  test_symbolic_engine.py
nile/ui/: __init__.py  web_interface.py
