[project]
name = "nile"
version = "0.1.0"
description = "NeuroSymbolic Interactive Language Engine"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "transformers>=4.36.0",
    "torch>=2.0.0",
    "python-dotenv>=1.0.0",
    "sympy>=1.12",
    "protobuf>=6.31.0",
    "fugashi>=1.4.0"
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."] 